# ROS1-uuv-neotic

./: README.md
rexrov_ocean/: CMakeLists.txt  package.xml  test_world
rexrov_ocean/launch/: control_system.launch
rexrov_ocean/publisher/: cml.py  float.py  goal.py  goal_trigger.py  goal_yolo.py  turn.py
rexrov_ocean/receiver/: acceleration.py  angular_velocity.py  linear_velocity.py  position.py  posture.py
rexrov_ocean/src/: example.py
rexrov_ocean/test_launch/: angular_info.launch  linear_info.launch  test.launch
uuv_gazebo_plugins/uuv_gazebo_plugins/: CMakeLists.txt  package.xml
uuv_gazebo_plugins/uuv_gazebo_plugins/include/uuv_gazebo_plugins/: Def.hh
uuv_gazebo_plugins/uuv_gazebo_plugins/src/: BuoyantObject.cc  HydrodynamicModel.cc
uuv_gazebo_plugins/uuv_gazebo_ros_plugins/include/uuv_gazebo_ros_plugins/: UnderwaterObjectROSPlugin.hh
uuv_gazebo_plugins/uuv_gazebo_ros_plugins/src/: UnderwaterObjectROSPlugin.cc
uuv_sensor_plugins/uuv_sensor_ros_plugins/src/: ROSBaseModelPlugin.cc  ROSBasePlugin.cc
yolo_digit_detector/: CMakeLists.txt  package.xml  setup.py
yolo_digit_detector/config/: yolo_config.yaml
yolo_digit_detector/launch/: start_yolo.sh  yolo_detector.launch
yolo_digit_detector/msg/: DetectionResult.msg
yolo_digit_detector/scripts/: yolo_node.py
